# json_upnp_proxy

./: pyproject.toml
json_upnp_proxy/: __init__.py  json_upnp_prox_server.py
